clusters/home/internal/router/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: adguard-external
  namespace: internal
subsets:
  - addresses:
      - ip: 192.168.1.50
    ports:
      - name: http
        port: 8082
