clusters/home/internal/router/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-external
  namespace: internal

spec:
  ports:
    - name: http
      protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
